--- a/.ideavimrc
+++ b/.ideavimrc
@@ -40,6 +40,7 @@ map <leader>sg <Action>(Generate)
 map <leader>sv <Action>(IntroduceVariable)
 map <leader>sm <Action>(ExtractMethod)
 map <leader>sc <Action>(IntroduceConstant)
+map <leader>sp <Action>(IntroduceParameter)
 map <leader>st <Action>(SurroundWith)
 
 " r - rename
